# pytemplate

./: README.md  pyproject.toml
src/pytemplate/: __init__.py  cli.py
src/pytemplate/addition/: __init__.py  addition.py
